--- a/webpack-intro/package.json
+++ b/webpack-intro/package.json
@@ -11,8 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1",
-    "jquery": "^3.6.1",
+    "jquery": "^3.6.1"
+  },
+  "devDependencies": {
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   }
